language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/borrow_global_acquires_invalid_2.exp
error: 

   ┌── tests/move_check/translated_ir_tests/borrow_tests/borrow_global_acquires_invalid_2.move:7:17 ───
   │
 7 │         let x = borrow_global_mut<T1>(Transaction::sender());
   │                 -------------------------------------------- It is still being mutably borrowed by this reference
 8 │         acquires_t2();
 9 │         acquires_t1();
   │         ^^^^^^^^^^^^^ Invalid acquiring of resource 'T1'
   │

error: 

    ┌── tests/move_check/translated_ir_tests/borrow_tests/borrow_global_acquires_invalid_2.move:14:17 ───
    │
 14 │         let x = borrow_global_mut<T1>(Transaction::sender());
    │                 -------------------------------------------- It is still being mutably borrowed by this reference
 15 │         acquires_t2();
 16 │         acquires_t1();
    │         ^^^^^^^^^^^^^ Invalid acquiring of resource 'T1'
    │

error: 

    ┌── tests/move_check/translated_ir_tests/borrow_tests/borrow_global_acquires_invalid_2.move:21:17 ───
    │
 21 │         let x = borrow_global_mut<T1>(Transaction::sender());
    │                 -------------------------------------------- It is still being mutably borrowed by this reference
 22 │         acquires_t1();
    │         ^^^^^^^^^^^^^ Invalid acquiring of resource 'T1'
    │

